--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="email" class="form-label">Email</label>
-                                    <input id="email" name="email" type="text" placeholder="VD: email@domain.com"
-                                        class="form-control">
+                                    <input id="email" name="email" type="email" placeholder="VD: email@domain.com"
+                                        class="form-control" required>
                                     <span class="form-message"></span>
                                 </div>
                                 <div class="form-group">
