--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
                                 <div class="form-group">
                                     <label for="name" class="form-label">Họ Và Tên:</label>
                                     <input id="name" name="name" type="text" placeholder="VD: Nguyễn Văn Anh"
-                                        class="form-control">
+                                        class="form-control" required>
                                     <span class="form-message"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label for="work" class="form-label">Công Việc và vị trí muốn ứng tuyển</label>
+                                    <label for="work" class="form-label">Công việc và vị trí muốn ứng tuyển</label>
                                     <input id="work" name="work" type="text" placeholder="VD: CNTT"
-                                        class="form-control">
+                                        class="form-control" required>
                                     <span class="form-message"></span>
                                 </div>
                                 <div class="form-group">
@@ -60,13 +60,13 @@
                                 <div class="form-group">
                                     <label for="phone" class="form-label">Số điện thoại</label>
                                     <input id="phone" name="phone" type="number" placeholder="VD: 0322225"
-                                        class="form-control">
+                                        class="form-control" required>
                                     <span class="form-message"></span>
                                 </div>
                                 <div class="form-group">
                                     <label for="birthday" class="form-label">Ngày Sinh</label>
                                     <input id="birthday" name="birthday" type="date" placeholder="Enter your password"
-                                        class="form-control">
+                                        class="form-control" required>
                                     <span class="form-message"></span>
                                 </div>
                                 <div class="form-group nav">
@@ -88,38 +88,38 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="address" class="form-label">Địa chỉ</label>
-                                    <input id="address" name="address" type="text" class="form-control">
+                                    <input id="address" name="address" type="text" class="form-control" required>
                                     <span class="form-message"></span>
                                 </div>
                                 <div class="form-group">
                                     <label for="facebook" class="form-label">Facebook</label>
-                                    <input id="facebook" name="facebook" type="text" class="form-control">
+                                    <input id="facebook" name="facebook" type="text" class="form-control" >
                                     <span class="form-message"></span>
                                 </div>
                                 <hr />
 
-                                <h6 class="mt-3">Tin học</h6>
+                                <h6 class="mt-3">Tin Học</h6>
                                 <div class="form-group">
                                     <label for="word" class="form-label">Word (5/5)</label>
-                                    <input id="word" name="word" type="number" placeholder="VD: 4" class="form-control">
+                                    <input id="word" name="word" type="number" placeholder="VD: 4" class="form-control" required>
                                     <span class="form-message"></span>
                                 </div>
                                 <div class="form-group">
                                     <label for="excel" class="form-label">Excel (5/5)</label>
                                     <input id="excel" name="excel" type="number" placeholder="VD: 4"
-                                        class="form-control">
+                                        class="form-control" required>
                                     <span class="form-message"></span>
                                 </div>
                                 <div class="form-group">
                                     <label for="power-point" class="form-label">Power point (5/5)</label>
                                     <input id="power-point" name="power-point" type="number" placeholder="VD: 4"
-                                        class="form-control">
+                                        class="form-control" required>
                                     <span class="form-message"></span>
                                 </div>
                                 <div class="form-group">
                                     <label for="outlook" class="form-label">Outlook (5/5)</label>
                                     <input id="outlook" name="outlook" type="number" placeholder="VD: 4"
-                                        class="form-control">
+                                        class="form-control" required>
                                     <span class="form-message"></span>
                                 </div>
                                 <hr />
