--- a/index.html
+++ b/index.html
@@ -100,24 +100,24 @@
 
                                 <h6 class="mt-3">Tin Học</h6>
                                 <div class="form-group">
-                                    <label for="word" class="form-label">Word (5/5)</label>
-                                    <input id="word" name="word" type="number" placeholder="VD: 4" class="form-control" required>
+                                    <label for="word" class="form-label">Word (1-5)</label>
+                                    <input id="word" name="word" type="number" min="1" max="5" placeholder="VD: 4" class="form-control" required>
                                     <span class="form-message"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label for="excel" class="form-label">Excel (5/5)</label>
+                                    <label for="excel" class="form-label">Excel (1-5)</label>
                                     <input id="excel" name="excel" type="number" placeholder="VD: 4"
                                         class="form-control" required>
                                     <span class="form-message"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label for="power-point" class="form-label">Power point (5/5)</label>
+                                    <label for="power-point" class="form-label">Power point (1-5)</label>
                                     <input id="power-point" name="power-point" type="number" placeholder="VD: 4"
                                         class="form-control" required>
                                     <span class="form-message"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label for="outlook" class="form-label">Outlook (5/5)</label>
+                                    <label for="outlook" class="form-label">Outlook (1-5)</label>
                                     <input id="outlook" name="outlook" type="number" placeholder="VD: 4"
                                         class="form-control" required>
                                     <span class="form-message"></span>
