--- a/index.html
+++ b/index.html
@@ -106,19 +106,19 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="excel" class="form-label">Excel (1-5)</label>
-                                    <input id="excel" name="excel" type="number" placeholder="VD: 4"
+                                    <input id="excel" name="excel" type="number" min="1" max="5" placeholder="VD: 4"
                                         class="form-control" required>
                                     <span class="form-message"></span>
                                 </div>
                                 <div class="form-group">
                                     <label for="power-point" class="form-label">Power point (1-5)</label>
-                                    <input id="power-point" name="power-point" type="number" placeholder="VD: 4"
+                                    <input id="power-point" name="power-point" type="number" min="1" max="5" placeholder="VD: 4"
                                         class="form-control" required>
                                     <span class="form-message"></span>
                                 </div>
                                 <div class="form-group">
                                     <label for="outlook" class="form-label">Outlook (1-5)</label>
-                                    <input id="outlook" name="outlook" type="number" placeholder="VD: 4"
+                                    <input id="outlook" name="outlook" type="number" min="1" max="5" placeholder="VD: 4"
                                         class="form-control" required>
                                     <span class="form-message"></span>
                                 </div>
