--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
 
                                 <div class="form-group">
-                                    <label for="target" class="form-label">Mục tiêu nghệ nghiệp</label>
+                                    <label for="target" class="form-label">Mục tiêu nghề nghiệp</label>
                                     <textarea id="target" name="target" class="form-control"></textarea>
                                     <span class="form-message"></span>
                                 </div>
